--- a/themes/2023dark/layouts/_default/baseof.html
+++ b/themes/2023dark/layouts/_default/baseof.html
@@ -2,14 +2,25 @@
 <html lang="{{ .Site.Language.Lang }}">
 <head>
     <meta charset="UTF-8">
-    <title>{{ .Site.Title }}</title>
+    <title>{{ .Site.Title }}{{ with .Params.title }} - {{ . }}{{ end }}</title>
+    {{- /* 부트스트랩 */}}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    {{- /* 오픈그래프 */}}
+    {{ template "_internal/opengraph.html" . }}
+    {{- /* 제작자 명시 */ -}}
+    <meta name="theme-anthor" content="https://github.com/Jx2H">
 </head>
 <body>
-    <header>{{ partial "header/header.html" . }}</header>
+    <header>
+        {{ partial "header/header.html" . }}
+    </header>
     <div id="main">
-        {{ block "main" . }}
+        {{ block "main" . }}    
         {{ end }}
     </div>
-    <footer>{{ partial "footer/footer.html" . }}</footer>
+    <footer>
+        {{ partial "footer/footer.html" . }}
+    </footer>
 </body>
 </html>
