--- a/themes/2023dark/layouts/index.html
+++ b/themes/2023dark/layouts/index.html
@@ -1,13 +1,6 @@
 {{ define "main" }}
-    <!-- <p>이 테마는 블로그 형태가 아닙니다. _index.md를 index.md로 변경하십시오.</p> -->
     <!-- html.validate.styles: false -->
-    <!-- TODO: 중복 코드 부분 템플릿으로 합치기 -->
-    <div id="content" style="{{ if isset .Params "center" }}text-align: center;{{ end }}">
-        {{ .Content }}
-        {{ with .Site.GetPage (add "community" "/front.md") }}
-        <p>{{ printf "%#v" .IsPage }}</p>
-            {{ range .Pages }}
-            {{ end }}
-        {{ end }}
+    <div id="content" style="text-align: center;">
+        <h1>와 메인!</h1>
     </div>
 {{ end }}
