--- a/themes/2023dark/layouts/partials/header/header.html
+++ b/themes/2023dark/layouts/partials/header/header.html
@@ -8,7 +8,7 @@
                 {{ if $p.IsPage }}
                 <li class="nav-item">
                     <a class="nav-link" href="{{ $p.RelPermalink }}">
-                        {{ $p.Title }}
+                        {{ .Title }}
                     </a>
                 </li>
                 {{ end }}
@@ -18,27 +18,41 @@
                 <li class="nav-item dropdown">
                     {{ $front := false }}
                     {{ with $.Site.GetPage (add $dir.Name "/front.md") }}
-                    {{ $front = .}}
+                    {{ $front = . }}
                     {{ end }}
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         {{ with $front }}
                         {{ .Title }}
                         {{ else }}
                         {{ $dir.Name }}
-                        {{ end}}
+                        {{ end }}
                     </a>
                     <ul class="dropdown-menu" data-bs-theme="dark">
                         {{ with $front }}
                         <li>
-                            <a class="dropdown-item" href="{{ .RelPermalink }}">{{ .Title }} 대문</a>
+                            <a class="dropdown-item" href="{{ .RelPermalink }}">
+                                {{ .Title }} 대문
+                            </a>
                         </li>
                         <li><hr class="dropdown-divider"></li>
                         {{ end }}
                         {{ range ($.Site.GetPage (add "/" $dir.Name)).Pages }}
                         {{ if eq .File.LogicalName "front.md"}}{{ continue }}{{ end }}
                         <li>
-                            <a class="dropdown-item" href="{{ .RelPermalink }}">{{ .Title }}</a>
+                            <a class="dropdown-item" href="{{ .RelPermalink }}">
+                                {{ .Title }}
+                            </a>
                         </li>
+                        {{ end }}
+                        {{ with (index $front.Params "links") }}
+                        <li><hr class="dropdown-divider"></li>
+                        {{ range $v := (sort . "weight") }}
+                        <li>    
+                            <a class="dropdown-item" href="{{ if hasPrefix $v.value "http" }}{{ $v.value }}{{ else }}{{ $v.value | markdownify }}{{ end }}" target="_blank">
+                                {{ $v.name }}
+                            </a>
+                        </li>
+                        {{ end }}
                         {{ end }}
                     </ul>
                 </li>
