기본틀 다지기 4 (콘텐츠 작성 시작)

--- a/themes/2023dark/layouts/index.html
+++ b/themes/2023dark/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
     <!-- html.validate.styles: false -->
-    <div id="content" style="text-align: center;">
+    <div style="text-align: center;">
         <h1>와 메인!</h1>
     </div>
 {{ end }}
