--- a/themes/2023dark/layouts/_default/baseof.html
+++ b/themes/2023dark/layouts/_default/baseof.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ .Site.Title }}{{ with .Params.title }} - {{ . }}{{ end }}</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ .Site.BaseURL }}favicon.ico" type="image/x-icon">
+    {{- /* 기본 CSS */}}
+    <link rel="stylesheet" href="{{ .Site.BaseURL }}css/basic.css">
     {{- /* 부트스트랩 */}}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
