프로토타입

--- a/themes/2023dark/layouts/_default/single.html
+++ b/themes/2023dark/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-    <div id="content" style="{{ if isset .Params "center" }}text-align: center;{{ end }}">
+    <div id="content" {{ if not (isset .Params "nopeck") }}class="peck"{{ end }} {{ if isset .Params "center" }}style="text-align: center;"{{ end }}>
         {{ .Content }}
     </div>
 {{ end }}
