메인 홈 추가, 하단 바 추가

--- a/themes/2023dark/layouts/_default/baseof.html
+++ b/themes/2023dark/layouts/_default/baseof.html
@@ -18,7 +18,7 @@
     <header>
         {{ partial "header/header.html" . }}
     </header>
-    <div id="main">
+    <div id="main" class="min-vh-100">
         {{ block "main" . }}    
         {{ end }}
     </div>
