Squashed commit of the following:
commit 5334704c5492998e24da8e316511c649ce022ae8
Date:   Wed May 17 15:09:34 2023 +0900

    baseof 일부 태그 오타 수정, 목차 추가, 콘텐츠 구조 변경, 골드마크 설정값 추가

commit a2b8e08a6ac1604eef4f1e5acb9d7862944d2870
Date:   Wed May 17 02:20:33 2023 +0900

    콘텐츠 구조 변경

--- a/static/css/basic.css
+++ b/static/css/basic.css
@@ -10,7 +10,13 @@
 }
 
 html {
-    font-size: 18px !important;
+    font-size: 20px;
+}
+
+@media screen and (max-width: 767px){
+    html {
+        font-size: 20pt;
+    }
 }
 
 nav.navbar {
@@ -22,6 +28,11 @@ nav.navbar {
     margin-top: 30px;
 }
 
-#content.peck {
-    width: 700px;
+
+.peck {
+    width: 700px !important;
+}
+
+#content-toc ul {
+    margin-bottom: 0px !important;
 }
