--- a/themes/2023dark/layouts/_default/baseof.html
+++ b/themes/2023dark/layouts/_default/baseof.html
@@ -12,7 +12,7 @@
     {{- /* 오픈그래프 */}}
     {{ template "_internal/opengraph.html" . }}
     {{- /* 제작자 명시 */ -}}
-    <meta name="theme-anthor" content="https://github.com/Jx2H">
+    <meta name="theme-author" content="https://github.com/Jx2H">
 </head>
 <body>
     <div id="main" class="min-vh-100">
