--- a/themes/2023dark/layouts/_default/list.html
+++ b/themes/2023dark/layouts/_default/list.html
@@ -1,4 +1,13 @@
 {{ define "main" }}
     <p>list</p>
     {{ .Content }}
+    <ul class="contents">
+        {{ range .RegularPages }}
+        <li>
+            <div>
+                {{ .Title }}
+            </div>
+        </li>
+        {{ end }}
+    </ul>
 {{ end }}
