--- a/themes/2023dark/layouts/partials/header/header.html
+++ b/themes/2023dark/layouts/partials/header/header.html
@@ -4,48 +4,31 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto">
-                {{ range $p := (.Site.GetPage "/").Pages -}}
-                {{ if $p.IsPage -}}
+                {{ with .Site.GetPage "/" }}
+                {{ range .Pages }}
+                {{ if .IsPage }}
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ $p.RelPermalink }}">
-                        {{- .Title -}}
+                    <a class="nav-link" href="{{ .RelPermalink }}">
+                        {{ .Title }}
                     </a>
                 </li>
-                {{ end -}}
-                {{ end -}}
-                {{ range $dir := (readDir "/content/") -}}
-                {{ if $dir.IsDir -}}
+                {{ else if .IsSection }}
                 <li class="nav-item dropdown">
-                    {{ $front := false -}}
-                    {{ with $.Site.GetPage (add $dir.Name "/front.md") -}}
-                    {{ $front = . -}}
-                    {{ end -}}
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        {{- with $front -}}
-                        {{- .Title -}}
-                        {{ else }}
-                        {{- $dir.Name -}}
-                        {{ end -}}
-                    </a>
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ .Title }}</a>
                     <ul class="dropdown-menu" data-bs-theme="dark">
-                        {{ with $front -}}
                         <li>
                             <a class="dropdown-item" href="{{ .RelPermalink }}">
-                                {{ .Title }} 대문
+                                대문
                             </a>
                         </li>
                         <li><hr class="dropdown-divider"></li>
+                        {{ with .Site.GetPage (add "/" .Type) }}
+                        {{ if gt .Sections.Len 0 }}
+                        {{ partial "header/dropdown-items.html" .Sections }}
+                        <li><hr class="dropdown-divider"></li>
                         {{ end -}}
-                        {{ range ($.Site.GetPage (add "/" $dir.Name)).Pages -}}
-                        {{ if eq .File.LogicalName "front.md"}}{{ continue }}{{ end -}}
-                        <li>
-                            <a class="dropdown-item" href="{{ .RelPermalink }}">
-                                {{- .Title -}}
-                            </a>
-                        </li>
-                        {{ end -}}
-                        {{ with $front -}}
-                        {{ with (index $front.Params "links") -}}
+                        {{ partial "header/dropdown-items.html" .RegularPages }}
+                        {{ with (index .Params "links") -}}
                         <li><hr class="dropdown-divider"></li>
                         {{ range $v := (sort . "weight") -}}
                         <li>    
@@ -58,6 +41,7 @@
                         {{ end -}}
                     </ul>
                 </li>
+                {{ end -}}
                 {{ end -}}
                 {{ end -}}
             </ul>
