--- a/themes/2023dark/layouts/index.html
+++ b/themes/2023dark/layouts/index.html
@@ -14,7 +14,7 @@
                 <h2>운영하고 있는 것들</h2>
             </div>
             <div class="h-card row justify-content-center me-0 mb-2">
-                <div class="card p-0 ms-3 mx-2 col-2 bg-dark text-white">
+                <div class="card p-0 mx-2 mb-2 col-xl-2 col-sm-8 bg-dark text-white">
                     {{ with resources.Get "images/home/broadcast_screen.jpg" }}
                     {{ $img := .Resize "300x" }}
                     {{ $img = $img.Crop "300x150 center" }}
@@ -26,7 +26,7 @@
                         <a href="https://www.youtube.com/@jke" class="btn btn-primary" target="_blank">시청하기</a>
                     </div>
                 </div>
-                <div class="card p-0 mx-1 col-2 bg-dark text-white">
+                <div class="card p-0 mx-2 mb-2 col-xl-2 col-sm-8 bg-dark text-white">
                     {{ with resources.Get "images/home/discord_server_snapshot.jpg" }}
                     {{ $img := .Resize "300x" }}
                     {{ $img = $img.Crop "300x150 center" }}
