뒤로가는 네비게이션 추가

--- a/themes/2023dark/layouts/partials/content/base.html
+++ b/themes/2023dark/layouts/partials/content/base.html
@@ -1,4 +1,20 @@
 <div id="content" class="{{ if not (isset .Params "nopeck") }}peck{{ end }}" {{ if isset .Params "center" }}style="text-align: center;"{{ end }}>
+    {{ with .Ancestors }}
+    {{ with index . 0 }}
+    {{ if not .IsHome }}
+    <div class="mb-2">
+        <span>
+            <a class="text-primary text-decoration-none align-content-center" href="{{ .RelPermalink }}">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+                </svg>
+                {{ .Title }}
+            </a>
+        </span>
+    </div>
+    {{ end }}
+    {{ end }}
+    {{ end }}
     {{ if .IsPage }}
     <div>
         <h1>{{ .Title }}</h1>
