--- a/layouts/shortcodes/img.html
+++ b/layouts/shortcodes/img.html
@@ -1,3 +1,3 @@
 {{ $img := resources.Get (.Get "src") }}
 {{ if .Get "width" }}{{ $img = $img.Resize (add (.Get "width") "x") }}{{ end }}
-<img src="{{ $img.RelPermalink }}" {{ if or (.Get "alt") (.Get "caption") }}alt="{{ with .Get "alt" }}{{ . }}{{ else }}{{ .Get "caption" }}{{ end }}"{{ end }} {{ if .Get "width" }}width="{{ $img.Width }}" height="{{ $img.Height }}"{{ end }} />
+<img src="{{ $img.RelPermalink }}" alt="{{ if or (.Get "alt") (.Get "caption") }}{{ with .Get "alt" }}{{ . }}{{ else }}{{ .Get "caption" }}{{ end }}{{ end }}" {{ if .Get "width" }}width="{{ $img.Width }}" height="{{ $img.Height }}"{{ end }} />
