--- a/themes/2023dark/layouts/partials/content/base.html
+++ b/themes/2023dark/layouts/partials/content/base.html
@@ -16,10 +16,10 @@
     {{ end }}
     {{ end }}
     {{ if .IsPage }}
-    <div>
+    <div id="title">
         <h1>{{ .Title }}</h1>
         {{ with .Description }}
-        <p class="mb-4">{{ . | markdownify }}</p>
+        <p id="description" class="mb-4">{{ . | markdownify }}</p>
         {{ end }}
     </div>
     {{ end }}
@@ -32,5 +32,7 @@
     <div class="position-fixed bottom-0 end-0 mb-3 me-5 btn-group" role="group">
         <button type="button" class="btn btn-success" onclick="window.scrollTo({ top: 0, behavior: 'smooth' });">위로</button>
     </div>
-    {{ .Content }}
+    <div id="content-body" class="markdown-body">
+        {{ .Content }}
+    </div>
 </div>
