--- a/static/css/basic.css
+++ b/static/css/basic.css
@@ -1,15 +1,8 @@
-@font-face {
-    font-family: 'Pretendard-Regular';
-    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
+@import url('github-markdown-light.css');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 
 :root {
-    --bs-body-font-family: 'Pretendard-Regular', sans-serif !important;
-}
-
-html {
+    --bs-body-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans KR", Helvetica, Arial,sans-serif, "Apple Color Emoji", "Segoe UI Emoji" !important;
     font-size: 20px;
 }
 
@@ -20,19 +13,27 @@ html {
 }
 
 nav.navbar {
-    font-size: 1em !important;
+    font-size: 1rem !important;
 }
 
 #content {
     margin: 0 auto;
     margin-top: 30px;
+    margin-bottom: 10px;
 }
 
-
 .peck {
-    width: 700px !important;
+    width: 40% !important;
 }
 
 #content-toc ul {
     margin-bottom: 0px !important;
+}
+
+#content-body {
+    font-size: 1rem;
+}
+
+#content-body p {
+    margin-left: 5px;
 }
