앵커 추가, 상단바 고정 해제

--- a/static/css/basic.css
+++ b/static/css/basic.css
@@ -37,3 +37,15 @@ nav.navbar {
 #content-body p {
     margin-left: 5px;
 }
+
+a.anchor-link {
+    margin-left: 10px;
+    display: inline-block;
+    text-decoration: none;
+    vertical-align: text-top;
+}
+
+.anchor-link > svg {
+    opacity: 0.5;
+    transform: scale(0.8);
+}
