--- a/themes/2023dark/layouts/_default/baseof.html
+++ b/themes/2023dark/layouts/_default/baseof.html
@@ -23,5 +23,6 @@
     <footer>
         {{ partial "footer/footer.html" . }}
     </footer>
+    <script src="{{ .Site.BaseURL }}/js/main.js"></script>
 </body>
 </html>
