--- a/themes/2023dark/layouts/partials/header/header.html
+++ b/themes/2023dark/layouts/partials/header/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top align-self-auto" id="mainNav">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark align-self-auto" id="mainNav"><!-- sticky-top -->
     <div class="container px-4">
         <a class="navbar-brand" href="{{ .Site.Home.RelPermalink }}">{{ .Site.Params.brandName }}</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
