비공개 섹션 구현, 중재자 행동 지침서 초안

--- a/themes/2023dark/layouts/_default/baseof.html
+++ b/themes/2023dark/layouts/_default/baseof.html
@@ -23,6 +23,6 @@
     <footer>
         {{ partial "footer/footer.html" . }}
     </footer>
-    <script src="{{ .Site.BaseURL }}/js/main.js"></script>
+    <script src="{{ .Site.BaseURL }}js/main.js"></script>
 </body>
 </html>
