--- a/themes/2023dark/layouts/partials/header/header.html
+++ b/themes/2023dark/layouts/partials/header/header.html
@@ -12,7 +12,7 @@
                         {{ .Title }}
                     </a>
                 </li>
-                {{ else if .IsSection }}
+                {{ else if (and (.IsSection) (not (index .Params "headless"))) }}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ .Title }}</a>
                     <ul class="dropdown-menu" data-bs-theme="dark">
