--- a/themes/2023dark/layouts/_default/baseof.html
+++ b/themes/2023dark/layouts/_default/baseof.html
@@ -2,6 +2,7 @@
 <html lang="{{ .Site.Language.Lang }}">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>{{ with .Params.title }}{{ . }} - {{ end }}{{ .Site.Title }}</title>
     <link rel="shortcut icon" href="{{ .Site.BaseURL }}favicon.ico" type="image/x-icon">
     {{- /* 기본 CSS */}}
